--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "Hana Kim",
   "license": "ISC",
   "dependencies": {
+    "@babel/node": "^7.13.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.13.9"
   }
 }
