--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "version": "1.0.0",
-  "description": "Cloning Youtube with Vanila and NodeJS",
-  "main": "index.js",
-  "author": "Hana Kim",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/node": "^7.13.0",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.13.9"
-  }
+    "name": "wetube",
+    "version": "1.0.0",
+    "description": "Cloning Youtube with Vanila and NodeJS",
+    "main": "index.js",
+    "author": "Hana Kim",
+    "license": "ISC",
+    "dependencies": {
+        "@babel/core": "^7.13.8",
+        "@babel/node": "^7.13.0",
+        "@babel/preset-env": "^7.13.8",
+        "express": "^4.17.1"
+    },
+    "scripts": {
+        "start": "nodemon --exec babel-node index.js"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
