--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
         "@babel/core": "^7.13.8",
         "@babel/node": "^7.13.0",
         "@babel/preset-env": "^7.13.8",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "helmet": "^4.4.1",
+        "morgan": "^1.10.0"
     },
     "scripts": {
-        "start": "nodemon --exec babel-node index.js --delay 2" 
+        "start": "nodemon --exec babel-node index.js --delay 2"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
